# iris

./: .gitignore  BRIGHTNESS-MATH.md  DESIGN.md  FINDINGS.md  README.md  STATUS.md  dev.sh  pyproject.toml
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/io/github/genneth/pupil/: BthomeEncoder.kt  MainActivity.kt  PupilApp.kt  PupilConfig.kt  PupilScreen.kt  PupilService.kt  PupilState.kt  PupilTheme.kt  PupilViewModel.kt  Settings.kt  SettingsActivity.kt  UpdateGovernor.kt
android/app/src/main/res/drawable/: ic_arrow_back.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_stat_pupil.xml
android/app/src/main/res/layout/: activity_main.xml  activity_settings.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: prefs.xml
android/app/src/test/java/io/github/genneth/pupil/: BthomeEncoderTest.kt  SettingsRepositoryTest.kt  UpdateGovernorTest.kt
contract/: bthome-golden.json
docs/iris/: PACKAGING.md
docs/retina/: DESIGN-v1.md  DESIGN.md  FINDINGS.md
docs/superpowers/plans/: 2026-07-03-pupil-ble-als.md  2026-07-04-pupil-compose.md  2026-07-04-reflex-phone-als-brightness.md
docs/superpowers/specs/: 2026-07-03-pupil-ble-als-design.md  2026-07-04-pupil-compose-design.md  2026-07-04-reflex-phone-als-brightness-design.md
hooks/: pre-commit
python/: iris.py  pyproject.toml
python/deploy/: config.example.toml  iris.service
python/scripts/: README.md  ble_als_probe.py  controls.py  ir_reject_spatial.py  ir_video.py  liveness.py  measure_power.py  probe_pixels.py  watch_brightness.py
python/scripts/iris/: ble_als_probe.py
python/scripts/pupil/: ble_als_probe.py
python/scripts/retina/: capture_test.py  ir_heatmap.py  ir_rejection.py  ir_strobe.py  manual_test.py  measure_sample.py  probe_fps.py  uhid_als_spike.py
python/src/iris/: __main__.py  brightness.py  camera.py  config.py  controller.py  curve.py  daemon.py  pupil.py  shell_brightness.py
python/src/pupil/: __init__.py
python/src/retina/: __init__.py  virtual_als.py
python/tests/: test_brightness.py  test_config.py  test_controller.py  test_curve.py  test_pupil.py  test_pupil_oracle.py  test_shell_brightness.py  test_smoke.py
rust/: Cargo.toml  README.md
rust/src/: main.rs
scripts/: README.md  capture_test.py  controls.py  ir_heatmap.py  ir_reject_spatial.py  ir_rejection.py  ir_strobe.py  ir_video.py  liveness.py  manual_test.py  measure_sample.py  meta_stream.py  probe.py  uhid_als_spike.py
