[project]
name = "iris"
version = "0.1.0"
description = "Use the laptop webcam as a virtual ambient-light sensor so GNOME can auto-adjust screen brightness."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hid-tools>=0.12",
    "linuxpy>=0.16",
    "numpy>=2.1",
    "pillow>=12.2.0",
]

# NB: no console-script entry point yet — the src/iris package is a stub; the
# validated experiments live in scripts/ and run via `uv run python scripts/<x>.py`.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iris"]
