[project]
name = "iris"
version = "0.1.0"
description = "Use the laptop webcam as a virtual ambient-light sensor so GNOME can auto-adjust screen brightness."
requires-python = ">=3.13"
dependencies = [
    "bleak>=0.23",
    "dbus-fast>=2.24",
    "hid-tools>=0.12",
    "linuxpy>=0.16",
    "numpy>=2.1",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "bthome-ble>=3.23.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/retina"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# Real gates: correctness (pyflakes/bugbear), imports, modernisation, obvious smells.
# Deliberately NOT enabling docstring / annotation-mandate / complexity pedantry.
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.mypy]
# Type-check only our own code (src/); scripts/ are an experimental lab notebook.
files = ["iris.py", "src"]
python_version = "3.13"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["linuxpy.*", "hidtools.*", "bleak.*", "dbus_fast.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
